--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "firebase": "^6.2.0",
     "geopoint": "^1.0.1",
     "jsonwebtoken": "^8.2.0",
+    "moment": "^2.24.0",
     "mongoose": "^4.11.11",
     "multer": "^1.4.1",
     "node-cron": "^2.0.3",
+    "node-geocoder": "^3.25.0",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
