--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
+    "aws-sdk": "^2.628.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
+    "dotenv": "^8.2.0",
     "express": "^4.15.4",
     "firebase": "^6.2.0",
     "geopoint": "^1.0.1",
