--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.24.0",
     "mongoose": "^4.11.11",
     "multer": "^1.4.1",
+    "nexmo": "^2.6.0",
     "node-cron": "^2.0.3",
     "node-geocoder": "^3.25.0",
     "nodemon": "^1.18.10",
