--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.15.4",
     "firebase": "^6.2.0",
     "geopoint": "^1.0.1",
+    "hybrid-crypto-js": "^0.2.2",
     "jsonwebtoken": "^8.2.0",
     "moment": "^2.24.0",
     "mongoose": "^4.11.11",
@@ -30,6 +32,7 @@
     "nexmo": "^2.6.0",
     "node-cron": "^2.0.3",
     "node-geocoder": "^3.25.0",
+    "node-rsa": "^1.0.8",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
