--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AWS_ID = AKIAJWYS3RHX4LCETE3A
-AWS_SECRET = 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
-AWS_BUCKET_NAME = bbsportsdevimages
+AWS_ID = AKIAILMSXPM34WRSQO3Q
+AWS_SECRET = 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
+AWS_BUCKET_NAME = bbsportsimages
