--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AWS_ID = AKIAILMSXPM34WRSQO3Q
-AWS_SECRET = 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
-AWS_BUCKET_NAME = bbsportsimages
+AWS_ID = 
+AWS_SECRET = 
+AWS_BUCKET_NAME = 
